finish responsive navbar

--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
   </head>
   <body>
     <nav>
-      <div class="left">
-        <ul class="nav-bar font-weight-bold">
-          <li><img src="./assets/img/logo.png" /></li>
-          <li>
+      <div class="row d-flex no-wrap my-left">
+          <span><img src="./assets/img/logo.png" />Zattix</span>
+          <span>
             <a href="#" alt=""><i class="fa fa-home"></i> Home</a>
-          </li>
-          <li>
+          </span>
+          <span>
             <a href="#" alt=""><i class="fa fa-archive"></i> Collections</a>
-          </li>
-          <li>
+          </span>
+          <span>
             <a href="#" alt=""
               ><i class="fa fa-shopping-cart"></i> Purchase list</a
             >
-          </li>
-          <li><button>post an ad</button></li>
-        </ul>
+          </span>
+          <span><button>post an ad</button></span>
+        
       </div>
       <div class="right font-weight-bold ">
         <a href="#"></a><i class="fa fa-envelope-square"></i></a>
