work on the search fields sections

--- a/index.html
+++ b/index.html
@@ -39,7 +39,28 @@
         <span><a href="#"><i class="fa fa-user-circle"></i>User</a></s></span>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <div class="hero">
+        <h1>Zattix</h1>
+        <p>Buying and Selling couldn't be Simpler than this.</p>
+        <form class="" action="search.html" method="GET">
+          <select class="ui dropdown">
+            <option value="">All Departments</option>
+            <option value="1">Gucci</option>
+            <option value="0">Prada</option>
+          </select>
+          <input type="text" placeholder="What are you looking for?">
+          <input type="text" placeholder="Gucci">
+          <input type="submit" placeholder="Search">
+      </form>
+      </div>
+      <!-- slider for products -->
+
+
+    </main>
     <footer></footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
