--- a/index.html
+++ b/index.html
@@ -55,7 +55,60 @@
       </form>
       </div>
       <!-- slider for products -->
-
+      <!-- <div class="hotads">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-10" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/83/429502/1.jpg?9895" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>eriaguhriubgiu</h5>
+                <p>ergavieriguebriubvhseirubei</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-10" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/69/40025/1.jpg?5162" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>eriaguhriubgiu</h5>
+                <p>ergavieriguebriubvhseirubei</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-10" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/83/429502/1.jpg?9895" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>eriaguhriubgiu</h5>
+                <p>ergavieriguebriubvhseirubei</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div> -->
+      <div class="ads container">
+        <h2>Hot Ads</h2>
+        <div class="card mb-3 align-items-center border-0"  >
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/83/429502/1.jpg?9895" alt="First slide">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">HTC One M8</h5>
+                <p class="card-text">Half-giant jinxes peg-leg gillywater broken glasses large black dog Great Hall. Nearly-Headless Nick now string them together, and answer me this, which creature would you be unwilling to kiss? Poltergeist</p>
+                <p class="card-text"><small class="text-muted">By John Doe</small></p>
+                <p class="card-text"><small class="text-muted">Location: Narnia</small></p>
+                <span>450$</span><span>Purchase DEtails</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </main>
     <footer></footer>
