add the electronics section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./assets/styles/app.css" />
   </head>
   <body>
-    <nav>
+    <nav class="sticky-top">
       <div class="row d-flex no-wrap my-left">
           <span><img src="./assets/img/logo.png" />Zattix</span>
           <span>
@@ -109,7 +109,43 @@
           </div>
         </div>
       </div>
-
+      <div class="electronics">
+        <h2 class="container text-uppercase">electronics</h2>
+        <div class="card-group container flex-wrap">
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/97/020392/1.jpg?0086" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/31/000141/1.jpg?3579" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/73/595462/1.jpg?9128" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/73/595462/1.jpg?9128" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
