add fashion section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">electronics</h2>
+        <h2 class="container text-uppercase">electronics <small>(computers, tablets, mobile phones, cameras and lenses)</small></h2>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/97/020392/1.jpg?0086" alt="Card image cap">
@@ -142,6 +142,60 @@
               <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="electronics">
+        <h2 class="container text-uppercase">fashion(watches, shoes, belts, glasses and more)</h2>
+        <div class="card-group container flex-wrap">
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/58/310861/1.jpg?4470" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">
+                Ragati Ragati Ladies V-Neck Cotton Pinstripe Shirt</h5>
+              <p class="card-text new">New</p>
+              <p class="card-text"><small class="text-muted">From: U.S</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/40/878721/1.jpg?7706" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Fashion Women's Metal Pendant Necklace</h5>
+              <p class="card-text">New</p>
+              <p class="card-text"><small class="text-muted">From: Argentina</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/19/708851/1.jpg?8676" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Fashion Mens Fashion Sneakers Running Shoes Black</h5>
+              <p class="card-text">New</p>
+              <p class="card-text"><small class="text-muted">From: Japan</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/26/600582/1.jpg?5125" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Curren Women Watches Analog Quartz Wrist Watch</h5>
+              <p class="card-text">New</p>
+              <p class="card-text"><small class="text-muted">From: Swiss</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
             </div>
           </div>
         </div>
