add baby category

--- a/index.html
+++ b/index.html
@@ -110,44 +110,60 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">electronics <small>(computers, tablets, mobile phones, cameras and lenses)</small></h2>
+        <h2 class="container text-uppercase">electronics</h2>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/97/020392/1.jpg?0086" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text new">New</p>
+              <p class="card-text"><small class="text-muted">From: U.S</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
             </div>
           </div>
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/31/000141/1.jpg?3579" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text new">New</p>
+              <p class="card-text"><small class="text-muted">From: U.S</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
             </div>
           </div>
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/73/595462/1.jpg?9128" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text new">New</p>
+              <p class="card-text"><small class="text-muted">From: U.S</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
             </div>
           </div>
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/73/595462/1.jpg?9128" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text new">New</p>
+              <p class="card-text"><small class="text-muted">From: U.S</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">fashion(watches, shoes, belts, glasses and more)</h2>
+        <h2 class="container text-uppercase">fashion</h2>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/58/310861/1.jpg?4470" alt="Card image cap">
@@ -190,6 +206,60 @@
             <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/26/600582/1.jpg?5125" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Curren Women Watches Analog Quartz Wrist Watch</h5>
+              <p class="card-text">New</p>
+              <p class="card-text"><small class="text-muted">From: Swiss</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="electronics">
+        <h2 class="container text-uppercase">Baby products</h2>
+        <div class="card-group container flex-wrap">
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/36/4833/1.jpg?5321" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Baby Carrier With A Hood - Brown
+              </h5>
+              <p class="card-text new">New</p>
+              <p class="card-text"><small class="text-muted">From: U.S</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/78/69919/1.jpg?9863" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Baby Diaper Bag</h5>
+              <p class="card-text">New</p>
+              <p class="card-text"><small class="text-muted">From: Argentina</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/03/808292/1.jpg?3364" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Newborn Mittens</h5>
+              <p class="card-text">New</p>
+              <p class="card-text"><small class="text-muted">From: Japan</small></p>
+              <div class="spans">
+                <span><i class="fa fa-cart-plus"></i></span>
+                <span>200$</span>
+              </div>
+            </div>
+          </div>
+          <div class="card m-3 border-0">
+            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/06/169952/1.jpg?9177" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Kids Stroller</h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Swiss</small></p>
               <div class="spans">
