customize the project to harry potter theme

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
         <div class="card mb-3 align-items-center border-0"  >
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/83/429502/1.jpg?9895" alt="First slide">
+              <img src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpbdbp11_1024x1024@2x.jpg?v=1575933160" alt="First slide">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">HTC One M8</h5>
+                <h5 class="card-title">Harry Potter Hogwarts Crest Allover Print Backpack</h5>
                 <p class="card-text">Half-giant jinxes peg-leg gillywater broken glasses large black dog Great Hall. Nearly-Headless Nick now string them together, and answer me this, which creature would you be unwilling to kiss? Poltergeist</p>
                 <p class="card-text"><small class="text-muted">By John Doe</small></p>
                 <p class="card-text"><small class="text-muted">Location: Narnia</small></p>
@@ -110,12 +110,12 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">electronics</h2>
+        <h2 class="container text-uppercase">wands & collectibles</h2>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/97/020392/1.jpg?0086" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwand_1_360x.jpg?v=1575933194" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <h5 class="card-title">Luna Lovegood's Collectible Wand</h5>
               <p class="card-text new">New</p>
               <p class="card-text"><small class="text-muted">From: U.S</small></p>
               <div class="spans">
@@ -125,9 +125,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/31/000141/1.jpg?3579" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandlun_360903f4-7d66-4ec2-ab4d-872a8f0a285e_360x.jpg?v=1575933195" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <h5 class="card-title">Harry Potter Collectible Wand</h5>
               <p class="card-text new">New</p>
               <p class="card-text"><small class="text-muted">From: U.S</small></p>
               <div class="spans">
@@ -137,9 +137,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/73/595462/1.jpg?9128" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandhr_d9ad403a-3bdf-45fe-b53e-b35e2cf2661a_1024x1024@2x.jpg?v=1575933195" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <h5 class="card-title">Hermione Granger's Wand</h5>
               <p class="card-text new">New</p>
               <p class="card-text"><small class="text-muted">From: U.S</small></p>
               <div class="spans">
@@ -149,9 +149,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/73/595462/1.jpg?9128" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandd_f6fdff10-533c-4341-a579-ddaed391f000_540x.jpg?v=1575933194" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">TCL 32S6800, 32", Full HD Smart Android LED TV - Black</h5>
+              <h5 class="card-title">Dumbledore's Wand</h5>
               <p class="card-text new">New</p>
               <p class="card-text"><small class="text-muted">From: U.S</small></p>
               <div class="spans">
@@ -163,13 +163,13 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">fashion</h2>
+        <h2 class="container text-uppercase">fashion accessories</h2>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/58/310861/1.jpg?4470" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbtime_ff04566f-9e4f-4bcd-8b8f-5fea032f7e78_360x.jpg?v=1575933193" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">
-                Ragati Ragati Ladies V-Neck Cotton Pinstripe Shirt</h5>
+                Hermione Granger™ Time-Turner™</h5>
               <p class="card-text new">New</p>
               <p class="card-text"><small class="text-muted">From: U.S</small></p>
               <div class="spans">
@@ -179,9 +179,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/40/878721/1.jpg?7706" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnb7374_1_1024x1024@2x.jpg?v=1575933188" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Fashion Women's Metal Pendant Necklace</h5>
+              <h5 class="card-title">Hogwarts Pin Set Harry Potter</h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Argentina</small></p>
               <div class="spans">
@@ -191,9 +191,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/19/708851/1.jpg?8676" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwtch03_1_e893de6c-1b92-415c-af30-5e0d98ac71aa_360x.jpg?v=1575933196" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Fashion Mens Fashion Sneakers Running Shoes Black</h5>
+              <h5 class="card-title">Hermione Granger™ Time-Turner™</h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Japan</small></p>
               <div class="spans">
@@ -203,9 +203,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/26/600582/1.jpg?5125" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnblunaneck_9ee0dc09-7371-4c79-91bf-4ed6edbcbb9d_1024x1024@2x.jpg?v=1575933191" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Curren Women Watches Analog Quartz Wrist Watch</h5>
+              <h5 class="card-title">Xenophilius Lovegood Necklace </h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Swiss</small></p>
               <div class="spans">
@@ -217,13 +217,12 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">Baby products</h2>
+        <h2 class="container text-uppercase">home decor</h2>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/36/4833/1.jpg?5321" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnwgrythr_540x.jpg?v=1575933197" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Baby Carrier With A Hood - Brown
-              </h5>
+              <h5 class="card-title"> Gryffindor Crest Tapestry Throw
               <p class="card-text new">New</p>
               <p class="card-text"><small class="text-muted">From: U.S</small></p>
               <div class="spans">
@@ -233,9 +232,10 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/78/69919/1.jpg?9863" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpmnmug04_467865d7-9247-4666-b873-259d6234f466_1024x1024@2x.jpg?v=1575933187" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Baby Diaper Bag</h5>
+              <h5 class="card-title">Gryffindor Crest Ceramic Mug
+              </h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Argentina</small></p>
               <div class="spans">
@@ -245,9 +245,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/03/808292/1.jpg?3364" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpmnmug01_1024x1024@2x.jpg?v=1575933187" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Newborn Mittens</h5>
+              <h5 class="card-title">Harry Potter Ceramic Hedwig Mug</h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Japan</small></p>
               <div class="spans">
@@ -257,9 +257,9 @@
             </div>
           </div>
           <div class="card m-3 border-0">
-            <img class="card-img-top" src="https://ke.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/06/169952/1.jpg?9177" alt="Card image cap">
+            <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpmnmug03_1024x1024@2x.jpg?v=1575933187" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Kids Stroller</h5>
+              <h5 class="card-title">Cauldron Soup Mug with Spoon</h5>
               <p class="card-text">New</p>
               <p class="card-text"><small class="text-muted">From: Swiss</small></p>
               <div class="spans">
