add container classes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">wands & collectibles</h2>
+        <div class="title container ">
+          <h2 class="text-uppercase">wands & collectibles</h2>
+          <p><a href="#">View All</a></p>
+        </div>
+        
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwand_1_360x.jpg?v=1575933194" alt="Card image cap">
@@ -163,7 +167,11 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">fashion accessories</h2>
+        <div class="title container ">
+          <h2 class="text-uppercase">fashion accessories</h2>
+          <p><a href="#">View All</a></p>
+        </div>
+        
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbtime_ff04566f-9e4f-4bcd-8b8f-5fea032f7e78_360x.jpg?v=1575933193" alt="Card image cap">
@@ -217,7 +225,10 @@
         </div>
       </div>
       <div class="electronics">
-        <h2 class="container text-uppercase">home decor</h2>
+        <div class="title container ">
+          <h2 class="text-uppercase">home decor</h2>
+          <p><a href="#">View All</a></p>
+        </div>
         <div class="card-group container flex-wrap">
           <div class="card m-3 border-0">
             <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnwgrythr_540x.jpg?v=1575933197" alt="Card image cap">
