add desktop footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div> -->
       <div class="ads container">
         <h2>Hot Ads</h2>
-        <div class="card mb-3 align-items-center border-0"  >
+        <div class="card mb-3 align-items-center  border-0"  >
           <div class="row no-gutters">
             <div class="col-md-4">
               <img src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpbdbp11_1024x1024@2x.jpg?v=1575933160" alt="First slide">
@@ -282,7 +282,42 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="container">
+      <div class="foot-left">
+        <div>
+          <img src="./assets/img/logolite.png" alt="logo">
+        </div>
+        <div>
+          <ul>
+            <li><a class="link" href="#">FAQs</a></li>
+            <li><a class="link" href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a class="link" href="#">Privacy Policy</a></li>
+            <li><a class="link" href="#">&copy; 2020 Zattix</a></li>
+            <li><a class="link" href="#">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div class="cats">
+          <h2>Categories</h2>
+          <ul>
+            <li><a href="#">BOOKS & MOVIES</a></li>
+            <li><a href="#">WANDS & COLLECTIBLES</a></li>
+            <li><a href="#">CLOTHING</a></li>
+            <li><a href="#">TOYS & COSTUMES</a></li>
+            <li><a href="#">ACESSORIES</a></li>
+            <li><a href="#">HOME DECOR</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="foot-right">
+        <img src="./assets/img/icon-facebook.svg" alt="fb">
+        <img src="./assets/img/icon-twitter.svg" alt="twt">
+        <img src="./assets/img/icon-instagram.svg" alt="ig">
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
