implement sidebar for search page

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         <p>Buying and Selling couldn't be Simpler than this.</p>
         <form class="" action="search.html" method="GET">
           <select class="ui dropdown">
-            <option value="">All Departments</option>
-            <option value="1">Gucci</option>
-            <option value="0">Prada</option>
+            <option value="">All Categories</option>
+            <option value="2">Stationery</option>
+            <option value="1">Wands</option>
+            <option value="0">Cauldrons</option>
           </select>
           <input type="text" placeholder="What are you looking for?" />
-          <input type="text" placeholder="Gucci" />
+          <input type="text" placeholder="Location" />
           <input type="submit" value="Search" />
         </form>
       </div>
